fix formatting issues in index.html and adjust padding and image sizes in about-us.html; add new story section

--- a/about-us.html
+++ b/about-us.html
@@ -30,7 +30,7 @@
     }
 
     .story-section {
-  padding: 100px;
+  padding: 50px 200px;
   display: flex;
   justify-content: center;
 }
@@ -42,7 +42,7 @@
 }
 
 .story-image img {
-  width: 350px; /* Smaller image width */
+  width: 400px; /* Smaller image width */
   height: auto;
   border-radius: 12px;
   object-fit: cover;
@@ -266,9 +266,7 @@
   </section>
   <!-- end about-us -->
 
-  <!-- end about-us-video -->
-
-  <section class="story-section">
+    <section class="story-section">
     <div class="story-container">
       <div class="story-image">
         <img src="images/Packages/aboutstory.jpg" alt="Sunset at Goa Beach" />
@@ -286,6 +284,23 @@
     </div>
   </section>
 
+  <section class="story-section">
+    <div class="story-container">
+      <div class="story-content">
+        <h2>From Guests to Family</h2>
+        <p>
+          At Chalo Goa, we don't have customers; we have guests who quickly become family. Our team comprises passionate Goa specialists—many born and raised here—who bring intimate knowledge of the region's terrain, culture, and hidden treasures. This local expertise allows us to create experiences that balance adventure with safety, excitement with relaxation, and tourist highlights with off-the-beaten-path authenticity.
+        </p>
+        <p>
+          Our commitment to responsible tourism means we partner with local communities, employ local guides, support sustainable practices, and ensure that our presence benefits Goa's ecology and economy. We believe travel should enrich both the traveler and the destination.
+        </p>
+      </div>
+      <div class="story-image">
+        <img src="images/Packages/aboutstory2.jpg" alt="Goa Beach Sunset" />
+      </div>
+    </div>
+  </section>
+  
   <section class="core-values">
     <h2 class="title">OUR VALUES</h2>
     <div class="values-container">
@@ -367,45 +382,6 @@
     </div>
   </section>
 
-  <section class="about-us-desc">
-    <div class="container">
-      <div class="row">
-        <div class="col-12 text-center">
-          <div class="section-title">
-            <h2>The Most Awarded Adventure<br>Tour Company in Europe</h2>
-            <img src="images/title-seperator.png" alt="Image">
-          </div>
-          <!-- end section-title -->
-        </div>
-        <!-- end col-12 -->
-        <div class="col-lg-6">
-          <p>Orci varius natoque penatibus et magnis dis turient montes nascetur ridiculus mus. Cras eleifend tellus sed
-            congue ectetur velit turpis faucibus odio eget volutpat odio lectus eu erat.</p>
-          <p>Pellentesque vestibulum fermentum velit non placerat aecenas in hendrerit justo quisque quis rhoncus exeget
-            semper semlam at lobortis velit. <a href="#">Vestibulum</a> ante ipsum primis in faucibus orcie luctus et
-            ultrices posuere Cubilia Curae ed dignissim leo lorema condimentum mauris vestibulum et maecenas vitae urna
-            aced magna facilisis porttitor.</p>
-          <p>Fusce in eros at lectus mollis pulvinar. Nullam in auctor mimus consectetur <a href="#">ullamcorper</a>
-            facilisis vivamus luctus.</p>
-        </div>
-        <!-- end col-6 -->
-        <div class="col-lg-6">
-          <p>Varius natoque penatibus et magnis dis turient montes scetur ridiculus mus. Cras eleifend tellus sed congue
-            ectetur velit urpis faucibus odio eget volutpat odio lectus eu erat esque estibulum fermentum velit non
-            placerat aecenas in hendrerit justo.</p>
-          <p>Quisque quis rhoncus exeget semper <a href="#">semlam at lobortis</a> velit estibulum ante ipsum primis in
-            Faucibus Orcie luctus et ultrices posuere cubilia curae ed dignissim leo lorema condimentum mauris
-            vestibulum et maecenas vitae urna aced magna cilisis cubilia curae ed Dignissim Porttitor fusce in eros at
-            lectus mollis pulvinar. Nullam in auctor mimus consectetur ullamcorper facilisis vivamus luctusodio lectus
-            eu erat esque estibulum <a href="#">fermentum</a> velit non placerat aecenas.</p>
-        </div>
-        <!-- end col-6 -->
-      </div>
-      <!-- end row -->
-    </div>
-    <!-- end container -->
-  </section>
-  <!-- end about-us-desc -->
   <section class="our-history">
     <div class="container">
       <div class="row no-gutters">
