refactor navbar styles and remove search box from index.html for improved layout

--- a/index.html
+++ b/index.html
@@ -202,38 +202,10 @@
 </head>
 
 <body>
-  <div class="search-box">
-    <div class="container">
-      <div class="row">
-        <div class="col-12"> <span class="search-close-btn"><i class="fa fa-times"></i></span>
-          <h3>Make Quick Search to Find!</h3>
-          <form>
-            <div class="form-group"> <i class="fa fa-search"></i>
-              <input type="text" placeholder="Search Activities, Themes or Tours">
-            </div>
-            <!-- end form-group -->
-            <button type="submit">SEARCH</button>
-          </form>
-          <dl>
-            <dt>Suggestions <i class="fa fa-long-arrow-right"></i></dt>
-            <dd><a href="#">Adventure</a></dd>
-            <dd><a href="#">Nothern Lights</a></dd>
-            <dd><a href="#">Waterfalls</a></dd>
-            <dd><a href="#">Winter Tours</a></dd>
-            <dd><a href="#">Glaciar Walk</a></dd>
-          </dl>
-        </div>
-        <!-- end col-12 -->
-      </div>
-      <!-- end row -->
-    </div>
-    <!-- end container -->
-  </div>
-  <!-- end search-box -->
   <header class="header-denmark">
     <div class="container">
-      <nav class="navbar"> <a href="index.html" class="navbar-brand"><img src="images/Packages/logo.png"
-            alt="Image"></a>
+      <nav class="navbar">
+        <a href="index.html" class="navbar-brand"><img src="images/Packages/logo.png" alt="Image"></a>
 
         <div class="menu-btn">
           <div class="menu-circle-wrap">
