--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
   <meta name="keywords"
     content="tour, ice, trip, travel, agency, life, vacation, treking, boat, walking, climbing, transition, svg, html, css">
       <!-- FAVICON -->
-  <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+  <link rel="icon" type="image/svg+xml" href="ico/favicon.png" />
 
   <!-- CSS FILES -->
   <link rel="stylesheet" href="css/swiper.min.css">
