--- a/test.html
+++ b/test.html
@@ -1,164 +1,259 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        /* Styles for the Package List */
-        /* Modal Styling */
-/* Modal Styling */
-.modal {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,0.7);
-  z-index: 9999;
-}
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <style>
+    /* Styles for the Package List */
+    /* Modal Styling */
+    /* Modal Styling */
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.7);
+      z-index: 9999;
+    }
 
-.modal-content {
-  background-color: #fff;
-  padding: 20px;
-  max-width: 800px;
-  margin: 5% auto;
-  border-radius: 8px;
-  overflow-y: auto;
-}
+    .modal-content {
+      background-color: #fff;
+      padding: 20px;
+      max-width: 800px;
+      margin: 5% auto;
+      border-radius: 8px;
+      overflow-y: auto;
+      max-height: 85vh;
+    }
 
-.close-btn {
-  float: right;
-  font-size: 24px;
-  cursor: pointer;
-}
+    .close-btn {
+      position: absolute;
+      top: 15px;
+      right: 20px;
+      font-size: 28px;
+      font-weight: bold;
+      cursor: pointer;
+      color: #333;
+      z-index: 10;
+      transition: color 0.3s;
+    }
 
-/* Photos Section */
-.photos-section {
-  display: flex;
-  gap: 10px;
-  margin-bottom: 20px;
-}
+    .close-btn:hover {
+      color: #ff6347;
+    }
 
-.photos-section img {
-  width: calc(33.33% - 10px);
-  height: 180px;
-  object-fit: cover;
-  border-radius: 8px;
-}
+    /* Photos Section */
+    .photos-section {
+      display: flex;
+      gap: 10px;
+      margin-bottom: 20px;
+    }
 
-/* Day Toggle */
-.day-toggle {
-  display: flex;
-  gap: 10px;
-  margin-bottom: 10px;
-}
+    .photos-section img {
+      width: calc(33.33% - 10px);
+      height: 180px;
+      object-fit: cover;
+      border-radius: 8px;
+    }
 
-.day-toggle button {
-  background-color: #ddd;
-  color: #000;
-  padding: 8px 16px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
+    /* Day Toggle */
+    .day-toggle {
+      display: flex;
+      gap: 10px;
+      margin-top: 10px;
+      margin-bottom: 20px;
+    }
 
-.day-toggle button.active {
-  background-color: #ff7f50;
-  color: #fff;
-}
+    .day-toggle button {
+      background-color: #ddd;
+      color: #000;
+      padding: 8px 16px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
 
-/* Itinerary Table */
-.itinerary-table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-top: 10px;
-}
+    .day-toggle button.active {
+      background-color: #ff7f50;
+      color: #fff;
+    }
 
-.itinerary-table th, .itinerary-table td {
-  border: 1px solid #ccc;
-  padding: 10px;
-  text-align: left;
-}
+    /* Itinerary Table */
+    .itinerary-table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
+      margin-bottom: 20px;
+    }
 
-.itinerary-table th {
-  background-color: #f4f4f4;
-  font-weight: bold;
-}
+    .itinerary-table th,
+    .itinerary-table td {
+      border: 1px solid #ccc;
+      padding: 10px;
+      text-align: left;
+    }
 
-.itinerary-table tr:nth-child(even) {
-  background-color: #fafafa;
-}
+    .itinerary-table th {
+      background-color: #f4f4f4;
+      font-weight: bold;
+    }
 
-/* Package Includes */
-#modal-includes {
-  margin-top: 10px;
-  padding-left: 20px;
-}
+    .itinerary-table tr:nth-child(even) {
+      background-color: #fafafa;
+    }
 
-#modal-includes li {
-  margin-bottom: 5px;
-}
+    .itinerary-table th:first-child,
+    .itinerary-table td:first-child {
+      width: 120px;
+      /* Adjust as needed */
+      min-width: 120px;
+      max-width: 120px;
+      text-align: left;
+    }
 
-/* Read More Button */
-.read-more-btn {
-  background-color: #ff7f50;
-  color: #fff;
-  padding: 10px 20px;
-  margin-top: 15px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
+    /* Package Includes */
+    #modal-includes {
+      margin-top: 10px;
+      padding-left: 20px;
+    }
 
-.read-more-btn:hover {
-  background-color: #ff6347;
-}
+    #modal-includes li {
+      margin-bottom: 5px;
+    }
 
+    /* Read More Button */
+    .read-more-btn {
+      background-color: #ff7f50;
+      color: #fff;
+      padding: 10px 20px;
+      margin-top: 15px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
 
-    </style>
+    .read-more-btn:hover {
+      background-color: #ff6347;
+    }
+  </style>
+
+  <link rel="stylesheet" href="css/swiper.min.css">
+  <link rel="stylesheet" href="css/daterangepicker.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <!-- Container for Package List -->
-<!-- Container for Package List -->
-<div id="package-list" class="package-list"></div>
+  <section class="popular-tours">
+    <div class="container">
+      <div class="row">
+        <div class="section-title">
+          <h1 class="location-heading">Goa Wildlife & Nature Packages</h1>
+        </div>
+        <!-- Dynamic content will be inserted here by JavaScript -->
+        <div id="wildlife-package-list" class="row">
+          <!-- Packages will be loaded here -->
+        </div>
+      </div>
+    </div>
+  </section>
 
-<!-- Modal -->
-<div id="packageModal" class="modal">
-  <div class="modal-content">
-    <span class="close-btn" onclick="closeModal()">&times;</span>
+  <section class="popular-tours">
+    <div class="container">
+      <div class="row">
+        <div class="section-title">
+          <h1 class="location-heading">Goa Adventure & Active Packages</h1>
+        </div>
 
-    <!-- Photos Section -->
-    <div id="modal-photos" class="photos-section"></div>
+        <!-- Dynamic content will be inserted here by JavaScript -->
+        <div id="adventure-package-list" class="row">
+          <!-- Packages will be loaded here -->
+        </div>
+      </div>
+    </div>
+  </section>
 
-    <!-- Title and Description -->
-    <h2 id="modal-title"></h2>
-    <p id="modal-description"></p>
+  <!-- Modal -->
+  <div id="packageModal" class="modal">
+    <div class="modal-content">
+      <span class="close-btn" onclick="closeModal()">&times;</span>
 
-    <!-- Day Toggle Buttons -->
-    <div id="day-toggle" class="day-toggle"></div>
+      <!-- Photos Section -->
+      <div id="modal-photos" class="photos-section"></div>
 
-    <!-- Itinerary Section -->
-    <h3>Itinerary</h3>
-    <table class="itinerary-table">
-      <thead>
-        <tr>
-          <th>Time</th>
-          <th>Activity</th>
-        </tr>
-      </thead>
-      <tbody id="modal-itinerary"></tbody>
-    </table>
+      <!-- Title and Description -->
+      <h2 id="modal-title"></h2>
+      <p id="modal-description"></p>
 
-    <!-- Package Includes -->
-    <h3>Package Includes</h3>
-    <ul id="modal-includes"></ul>
+      <!-- Day Toggle Buttons -->
+      <div id="day-toggle" class="day-toggle"></div>
+
+      <!-- Itinerary Section -->
+      <h3>Itinerary</h3>
+      <table class="itinerary-table">
+        <thead>
+          <tr>
+            <th>Time</th>
+            <th>Activity</th>
+          </tr>
+        </thead>
+        <tbody id="modal-itinerary"></tbody>
+      </table>
+
+      <!-- Package Includes -->
+      <h3>Package Includes</h3>
+      <ul id="modal-includes"></ul>
+    </div>
   </div>
-</div>
 
+  <script data-cfasync="false"
+    src="https://cdn-cgi.com/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+  <script>
+    // PRELOADER
+    (function ($) {
+      $(window).on("load", function () {
+        $("body").addClass("page-loaded");
+      });
 
-<script src="js/test.js"></script>
+      $(".datepicker__input").daterangepicker({
+        autoUpdateInput: false,
+        locale: {
+          cancelLabel: 'Clear'
+        }
+      });
+
+      $('.datepicker__input').on('apply.daterangepicker', function (ev, picker) {
+        $(this).val(picker.startDate.format('MM/DD/YYYY') + ' - ' + picker.endDate.format('MM/DD/YYYY'));
+      });
+
+      $('.datepicker__input').on('cancel.daterangepicker', function (ev, picker) {
+        $(this).val('');
+      });
+
+    })(jQuery)
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/odometer.js/0.4.8/odometer.min.js"></script>
+  <script src="js/scripts.js"></script>
+  <script src="js/test.js"></script>
 
 </body>
+
 </html>
