remove unused trekking and adventure package images; clean up HTML and JavaScript for improved readability

--- a/curatedpackages.html
+++ b/curatedpackages.html
@@ -369,34 +369,6 @@
 </head>
 
 <body>
-  <div class="search-box">
-    <div class="container">
-      <div class="row">
-        <div class="col-12"> <span class="search-close-btn"><i class="fa fa-times"></i></span>
-          <h3>Make Quick Search to Find!</h3>
-          <form>
-            <div class="form-group"> <i class="fa fa-search"></i>
-              <input type="text" placeholder="Search Activities, Themes or Tours">
-            </div>
-            <!-- end form-group -->
-            <button type="submit">SEARCH</button>
-          </form>
-          <dl>
-            <dt>Suggestions <i class="fa fa-long-arrow-right"></i></dt>
-            <dd><a href="#">Adventure</a></dd>
-            <dd><a href="#">Nothern Lights</a></dd>
-            <dd><a href="#">Waterfalls</a></dd>
-            <dd><a href="#">Winter Tours</a></dd>
-            <dd><a href="#">Glaciar Walk</a></dd>
-          </dl>
-        </div>
-        <!-- end col-12 -->
-      </div>
-      <!-- end row -->
-    </div>
-    <!-- end container -->
-  </div>
-  <!-- end search-box -->
   <header class="header-int">
     <div class="container">
       <nav class="navbar dark"> <a href="index.html" class="navbar-brand"><img src="images/Packages/logo.png"
@@ -442,6 +414,111 @@
     <div class="container">
       <div class="row">
         <div class="section-title">
+          <h2>Indulge in the Extraordinary!</h2>
+          <!-- <img src="images/title-seperator.png" alt="Image"> -->
+          <!-- end section-title -->
+        </div>
+        <!-- end col-6 -->
+        <!-- <p class="section-desc">Dive into the heart of Goa with our specially curated travel packages. Whether you're seeking adventure, relaxation, culture, or a bit of everything, we have the perfect plan for you. From sun-kissed beaches and thrilling watersports to heritage trails and vibrant nightlife, experience Goa like never before.<br><br>
+                  Pick your ideal getaway, sit back, and let us handle the details—so you can simply enjoy the magic of Goa! 🌴✨
+                </p> -->
+        <!-- end col-6 -->
+        <!-- end col-6 -->
+        <div class="col-lg-3">
+          <div class="tour-box">
+            <figure><img src="images/Packages/family.jpg" alt="Image"></figure>
+            <div class="tour-content">
+              <h3 class="tour-title">Family Tour Packages</h3>
+              <a href="#" class="explore-more" data-package="Family Tour Packages">EXPLORE MORE</a>
+            </div>
+            <!-- end tour-content -->
+          </div>
+          <!-- end tour-box -->
+        </div>
+        <!-- end col-3 -->
+        <div class="col-lg-3">
+          <div class="tour-box">
+            <figure><img src="images/Packages/camp'.jpg" alt="Image"></figure>
+            <div class="tour-content">
+              <h3 class="tour-title">Beach Camping</h3>
+              <a href="#" class="explore-more" data-package="Beach Camping Experiences">EXPLORE MORE</a>
+            </div>
+            <!-- end tour-content -->
+          </div>
+          <!-- end tour-box -->
+        </div>
+        <!-- end col-3 -->
+        <div class="col-lg-3">
+          <div class="tour-box">
+            <figure><img src="images/Packages/honeymoon.jpg" alt="Image"></figure>
+            <div class="tour-content">
+              <h3 class="tour-title">Honeymoon Packages</h3>
+              <a href="#" class="explore-more" data-package="Honeymoon Packages">EXPLORE MORE</a>
+            </div>
+            <!-- end tour-content -->
+          </div>
+          <!-- end tour-box -->
+        </div>
+        <!-- end col-3 -->
+        <div class="col-lg-3">
+          <div class="tour-box">
+            <figure><img src="images/Packages/yoga.jpg" alt="Image"></figure>
+            <div class="tour-content">
+              <h3 class="tour-title">Yoga Packages</h3>
+              <a href="#" class="explore-more" data-package="Yoga Packages">EXPLORE MORE</a>
+            </div>
+            <!-- end tour-content -->
+          </div>
+          <!-- end tour-box -->
+        </div>
+        <!-- end col-3 -->
+        <div class="col-lg-3">
+          <div class="tour-box">
+            <figure><img src="images/Packages/nature.jpg" alt="Image"></figure>
+            <div class="tour-content">
+              <h3 class="tour-title">Nature Packages</h3>
+              <a href="#" class="explore-more" data-package="Nature Packages">EXPLORE MORE</a>
+            </div>
+            <!-- end tour-content -->
+          </div>
+          <!-- end tour-box -->
+        </div>
+        <!-- end col-3 -->
+        <div class="col-lg-3">
+          <div class="tour-box">
+            <figure><img src="images/Packages/group.jpg" alt="Image"></figure>
+            <div class="tour-content">
+              <h3 class="tour-title">Group Packages</h3>
+              <a href="#" class="explore-more" data-package="Group Packages">EXPLORE MORE</a>
+            </div>
+            <!-- end tour-content -->
+          </div>
+          <!-- end tour-box -->
+        </div>
+        <!-- end col-3 -->
+        <div class="col-lg-3">
+          <div class="tour-box">
+            <figure><img src="images/Packages/trekking.jpg" alt="Image"></figure>
+            <div class="tour-content">
+              <h3 class="tour-title">Trekking Packages</h3>
+              <a href="#" class="explore-more" data-package="Trekking Packages">EXPLORE MORE</a>
+            </div>
+            <!-- end tour-content -->
+          </div>
+          <!-- end tour-box -->
+        </div>
+
+        <!-- end col-12 -->
+      </div>
+      <!-- end row -->
+    </div>
+    <!-- end container -->
+  </section>
+
+  <section class="popular-tours">
+    <div class="container">
+      <div class="row">
+        <div class="section-title">
           <h2>Handpicked Experiences, Perfectly Yours!</h2>
           <h1 class="location-heading">NORTH GOA</h1>
         </div>
@@ -465,7 +542,7 @@
             <figure><img src="images/Packages/north goa/2.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3 class="tour-title">Hippie Trail Heritage Tour</h3>
-              <a href="#" class="explore-more" data-package="Beach Camping Experiences">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Hippie Trail Heritage Tour">EXPLORE MORE</a>
             </div>
             <!-- end tour-content -->
           </div>
@@ -478,7 +555,7 @@
             <div class="tour-content">
               <h3 class="tour-title">Fort to Fort North Goa Heritage Trail
               </h3>
-              <a href="#" class="explore-more" data-package="Honeymoon Packages">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Fort to Fort North Goa Heritage Trail">EXPLORE MORE</a>
             </div>
             <!-- end tour-content -->
           </div>
@@ -491,7 +568,7 @@
             <div class="tour-content">
               <h3 class="tour-title">Nightlife Elite - Goa After Dark
               </h3>
-              <a href="#" class="explore-more" data-package="Yoga Packages">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Nightlife Elite - Goa After Dark">EXPLORE MORE</a>
             </div>
             <!-- end tour-content -->
           </div>
@@ -504,7 +581,7 @@
             <div class="tour-content">
               <h3 class="tour-title">North Goa Wellness Escape
               </h3>
-              <a href="#" class="explore-more" data-package="Nature Packages">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="North Goa Wellness Escape">EXPLORE MORE</a>
             </div>
             <!-- end tour-content -->
           </div>
@@ -517,7 +594,7 @@
 
 
   </section>
-  <!-- end popular-tours -->
+  
   <section class="popular-tours">
     <div class="container">
       <div class="row">
@@ -529,9 +606,8 @@
           <div class="tour-box">
             <figure><img src="images/Packages/southgoa/1.jpg" alt="Image"></figure>
             <div class="tour-content">
-              <h3 class="tour-title">South Goa Serenity Sojourn
-              </h3>
-              <a href="#" class="explore-more" data-package="South Goa Serenity">EXPLORE MORE</a>
+              <h3 class="tour-title">South Goa Serenity Sojourn</h3>
+              <a href="#" class="explore-more" data-package="South Goa Serenity Sojourn">EXPLORE MORE</a>
             </div>
           </div>
         </div>
@@ -540,8 +616,8 @@
           <div class="tour-box">
             <figure><img src="images/Packages/southgoa/2.jpg" alt="Image"></figure>
             <div class="tour-content">
-              <h3 class="tour-title"> Colonial Heritage Expedition</h3>
-              <a href="#" class="explore-more" data-package="Hidden Beach Explorer">EXPLORE MORE</a>
+              <h3 class="tour-title">Colonial Heritage Expedition</h3>
+              <a href="#" class="explore-more" data-package="Colonial Heritage Expedition">EXPLORE MORE</a>
             </div>
           </div>
         </div>
@@ -552,7 +628,7 @@
             <div class="tour-content">
               <h3 class="tour-title"> Luxury South Goa Retreat
               </h3>
-              <a href="#" class="explore-more" data-package="Portuguese Heritage">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Luxury South Goa Retreat">EXPLORE MORE</a>
             </div>
           </div>
         </div>
@@ -562,7 +638,7 @@
             <figure><img src="images/Packages/southgoa/4.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3 class="tour-title">Hidden Beaches of South Goa</h3>
-              <a href="#" class="explore-more" data-package="Luxury Resort">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Hidden Beaches of South Goa">EXPLORE MORE</a>
             </div>
           </div>
         </div>
@@ -572,7 +648,7 @@
             <figure><img src="images/Packages/southgoa/5.jpeg" alt="Image"></figure>
             <div class="tour-content">
               <h3 class="tour-title"> Bird Watcher's Paradise</h3>
-              <a href="#" class="explore-more" data-package="Spice Plantation">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Bird Watcher's Paradise">EXPLORE MORE</a>
             </div>
           </div>
         </div>
@@ -592,7 +668,7 @@
             <figure><img src="images/Packages/EAST GOA/1.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3 class="tour-title">Spice Plantation Immersion</h3>
-              <a href="#" class="explore-more" data-package="Spice Garden Adventure">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Spice Plantation Immersion">EXPLORE MORE</a>
             </div>
           </div>
         </div>
@@ -602,7 +678,7 @@
             <figure><img src="images/Packages/EAST GOA/2.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3 class="tour-title">Dudhsagar Falls Expedition</h3>
-              <a href="#" class="explore-more" data-package="Dudhsagar Falls">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Dudhsagar Falls Expedition">EXPLORE MORE</a>
             </div>
           </div>
         </div>
@@ -612,7 +688,7 @@
             <figure><img src="images/Packages/EAST GOA/3.jpeg" alt="Image"></figure>
             <div class="tour-content">
               <h3 class="tour-title">Ancient Temples of Goa</h3>
-              <a href="#" class="explore-more" data-package="Wildlife Sanctuary">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Ancient Temples of Goa">EXPLORE MORE</a>
             </div>
           </div>
         </div>
@@ -622,7 +698,7 @@
             <figure><img src="images/Packages/EAST GOA/4.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3 class="tour-title">Wild Eastern Goa Safari</h3>
-              <a href="#" class="explore-more" data-package="Cultural Village">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Wild Eastern Goa Safari">EXPLORE MORE</a>
             </div>
           </div>
         </div>
@@ -632,7 +708,7 @@
             <figure><img src="images/Packages/EAST GOA/5.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3 class="tour-title">Eastern Goa River Expedition</h3>
-              <a href="#" class="explore-more" data-package="Temple Heritage">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Eastern Goa River Expedition">EXPLORE MORE</a>
             </div>
           </div>
         </div>
@@ -652,7 +728,7 @@
             <figure><img src="images/Packages/beach-specific/1.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3 class="tour-title"> Arambol Beach Wellness Retreat </h3>
-              <a href="#" class="explore-more" data-package="Calangute Beach">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Arambol Beach Wellness Retreat">EXPLORE MORE</a>
             </div>
           </div>
         </div>
@@ -662,7 +738,7 @@
             <figure><img src="images/Packages/beach-specific/2.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3 class="tour-title">Palolem Beach Paradise</h3>
-              <a href="#" class="explore-more" data-package="Palolem Beach">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Palolem Beach Paradise">EXPLORE MORE</a>
             </div>
           </div>
         </div>
@@ -673,7 +749,7 @@
             <div class="tour-content">
               <h3 class="tour-title">Calangute Beach Club Experience
               </h3>
-              <a href="#" class="explore-more" data-package="Vagator Beach">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Calangute Beach Club Experience">EXPLORE MORE</a>
             </div>
           </div>
         </div>
@@ -683,7 +759,7 @@
             <figure><img src="images/Packages/beach-specific/4.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3 class="tour-title">Morjim Beach Turtle Conservation Retreat</h3>
-              <a href="#" class="explore-more" data-package="Anjuna Beach">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Morjim Beach Turtle Conservation Retreat">EXPLORE MORE</a>
             </div>
           </div>
         </div>
@@ -694,7 +770,7 @@
             <div class="tour-content">
               <h3 class="tour-title">Agonda Beach Romantic Getaway
               </h3>
-              <a href="#" class="explore-more" data-package="Baga Beach">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Agonda Beach Romantic Getaway">EXPLORE MORE</a>
             </div>
           </div>
         </div>
@@ -792,7 +868,7 @@
   <script src="js/wow.min.js"></script>
   <script src="js/odometer.min.js"></script>
   <script src="js/scripts.js"></script>
-  <script src="js/test.js"></script>
+  <script src="js/curateddetails.js"></script>
 
 </body>
 
